--- a/src/ChatManager.Next/Views/SettingsView.xaml
+++ b/src/ChatManager.Next/Views/SettingsView.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ChatManager.Views"
         xmlns:vm="clr-namespace:ChatManager.ViewModels"
         mc:Ignorable="d"
-        Title="SettingsView" MinHeight="400" MinWidth="850">
+        Title="SettingsView" MinHeight="400" MinWidth="850" Height="400" Width="850" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <vm:SettingsViewModel />
